# sdl_ogl_tests

./: CMakeLists.txt  README.md
alpha_test/: CMakeLists.txt
alpha_test/src/: context.cpp  context.h  main.cpp  render_name_list.h  texture.cpp  texture.h  tri_cache.cpp  tri_cache.h  utils.h
cmake/: FindOpenGLES3.cmake
include/: img_load.h  res_path.h  shader.h
nanovg/: CMakeLists.txt
nanovg/src/: main.cpp
nanovg/src/render/: vg_node.cpp  vg_node.h  vg_paint.cpp  vg_paint.h  vg_path.cpp  vg_path.h
ogl1/: CMakeLists.txt
ogl1/src/: main.cpp
ogl2/: CMakeLists.txt
ogl2/src/: main.cpp  shader.h
ogl3/: CMakeLists.txt
ogl3/src/: main.cpp
ogl4/: CMakeLists.txt
ogl4/src/: context.cpp  context.h  main.cpp  utils.cpp  utils.h
res/shaders/: alpha_test.frag  coords.frag  coords.vert  fxaa.frag  fxaa.vert  gl1.frag  gl1.vert  transform.frag  vg.frag  vg.vert  vg_test.frag  vg_test.vert
twinklebear/: CMakeLists.txt
vg/: CMakeLists.txt  TODO
vg/src/: color.h  context.cpp  context.h  line_cache.cpp  line_cache.h  main.cpp  main_tests.cpp  render_name_list.h  texture.cpp  texture.h  tri_cache.cpp  tri_cache.h  utils.cpp  utils.h  vec2.h  vec4.h
